--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ go:
 - 1.14
 
 script: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bluematador-client ./cmd
+
+deploy:
+  provider: releases
+  api_key: "GITHUB OAUTH TOKEN"
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: true
