Fix build command

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 go:
 - 1.14
-script: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bluematador-client ./cmd
+script: GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bluematador-client
 deploy:
   provider: releases
   skip_cleanup: true
